[project]
name = "email-env"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [{name = "Gurshitha"}]
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entrypoint = "my_env:EmailEnv"
